--- a/CardForm/src/main/res/layout/bt_card_form_fields.xml
+++ b/CardForm/src/main/res/layout/bt_card_form_fields.xml
@@ -69,32 +69,6 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        style="@style/bt_field_container"
-        android:weightSum="2">
-
-        <ImageView
-            style="@style/bt_card_form_icon"
-            tools:ignore="ContentDescription"
-            android:id="@+id/bt_card_form_postal_code_icon"/>
-
-        <android.support.design.widget.TextInputLayout
-            style="@style/bt_text_input_layout"
-            tools:ignore="RtlCompat"
-            android:paddingLeft="@dimen/bt_edit_text_icon_padding"
-            android:paddingStart="@dimen/bt_edit_text_icon_padding"
-            android:paddingEnd="0dp"
-            android:labelFor="@+id/bt_card_form_postal_code">
-
-            <com.payment.cardform.view.PostalCodeEditText
-                style="@style/bt_card_form_field"
-                android:id="@+id/bt_card_form_postal_code"
-                android:hint="@string/bt_form_hint_postal_code"
-                android:contentDescription="@string/bt_form_hint_postal_code"/>
-
-        </android.support.design.widget.TextInputLayout>
-
-    </LinearLayout>
 
     <LinearLayout style="@style/bt_field_container">
 
@@ -111,13 +85,13 @@
             android:paddingLeft="@dimen/bt_edit_text_icon_padding"
             android:paddingStart="@dimen/bt_edit_text_icon_padding"
             android:paddingEnd="0dp"
-            android:labelFor="@+id/bt_card_form_country_code">
+            android:labelFor="@+id/bt_card_form_first_name">
 
-            <com.payment.cardform.view.CountryCodeEditText
+            <com.payment.cardform.view.FirstNameEditText
                 style="@style/bt_card_form_field"
-                android:id="@+id/bt_card_form_country_code"
-                android:hint="@string/bt_form_hint_country_code"
-                android:contentDescription="@string/bt_form_hint_country_code"/>
+                android:id="@+id/bt_card_form_first_name"
+                android:contentDescription="@string/bt_form_hint_first_name"
+                android:hint="@string/bt_form_hint_first_name" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -125,27 +99,17 @@
             style="@style/bt_text_input_layout"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:labelFor="@+id/bt_card_form_mobile_number">
+            android:labelFor="@+id/bt_card_form_last_name">
 
-            <com.payment.cardform.view.MobileNumberEditText
+            <com.payment.cardform.view.LastNameEditText
                 style="@style/bt_card_form_field"
-                android:id="@+id/bt_card_form_mobile_number"
-                android:hint="@string/bt_form_hint_mobile_number"
-                android:contentDescription="@string/bt_form_hint_mobile_number"/>
+                android:id="@+id/bt_card_form_last_name"
+                android:contentDescription="@string/bt_form_hint_last_name"
+                android:hint="@string/bt_form_hint_last_name" />
 
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
 
-    <TextView
-        tools:ignore="RtlCompat"
-        android:id="@+id/bt_card_form_mobile_number_explanation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-8dp"
-        android:visibility="gone"
-        android:paddingLeft="@dimen/bt_mobile_number_explanation_padding"
-        android:paddingStart="@dimen/bt_mobile_number_explanation_padding"
-        android:paddingEnd="0dp"/>
 
 </merge>
